<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iwuvhugs.wallty.MainActivity" >

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_rate_app"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/action_share"/>

</menu>