<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iwuvhugs.wallty.MainActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="110"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="120"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="130"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>