<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/page_background">-->


    <LinearLayout
        android:id="@+id/wallty_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/page_background"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:visibility="visible">

        <com.iwuvhugs.wallty.views.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:drawableLeft="@drawable/ic_action_settings"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="7.5dp"
            android:layout_marginTop="7.5dp"
            android:background="@color/neutral" />

        <com.iwuvhugs.wallty.views.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/repeat"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <com.iwuvhugs.wallty.views.TextViewCustom
            android:id="@+id/wallty_seekBar_textView"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/wallty_seekBar"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:max="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="7.5dp"
            android:layout_marginTop="7.5dp"
            android:background="@color/neutral" />

        <com.iwuvhugs.wallty.views.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/select"
            android:textColor="@color/secondary_text" />

        <Spinner
            android:id="@+id/wallty_spinner_selection"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="7.5dp"
            android:layout_marginTop="7.5dp"
            android:background="@color/neutral" />

        <com.iwuvhugs.wallty.views.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/source"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/wallty_spinner_source"
            android:layout_width="match_parent"
            android:layout_height="32dp" />


    </LinearLayout>
</RelativeLayout>