<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/neutral"
    tools:context="com.iwuvhugs.wallty.MainActivity">

    <!--    <LinearLayout
            android:id="@+id/ad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>-->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/user_layout"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical">

                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/username_avatar"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:alpha="0"
                        android:contentDescription="@string/username_avatar"
                        android:scaleType="fitCenter"
                        app:riv_corner_radius="28dp" />

                    <com.iwuvhugs.wallty.views.TextViewCustom
                        android:id="@+id/username_textview"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginLeft="16dp"
                        android:alpha="0"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_below="@id/user_layout"
                    android:layout_marginTop="16dp"
                    android:alpha="0"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/your_followings"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/left_top_user_info_button_default"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:visibility="visible"
                            android:weightSum="10">

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="7"
                                android:ellipsize="marquee"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:text="@string/following"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:id="@+id/your_followings_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:ellipsize="marquee"
                                android:gravity="right"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:textColor="@color/blue_primary_dark"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/your_blogs"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/left_bottom_user_info_button_default"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:visibility="visible"
                            android:weightSum="10">

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="7"
                                android:ellipsize="marquee"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:text="@string/posts"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:id="@+id/your_blogs_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:ellipsize="marquee"
                                android:gravity="right"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:textColor="@color/blue_primary_dark"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/followers"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/right_top_user_info_button_default"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:visibility="visible"
                            android:weightSum="10">

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="7"
                                android:ellipsize="marquee"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:text="@string/followers"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:id="@+id/your_followers_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:ellipsize="marquee"
                                android:gravity="right"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:textColor="@color/blue_primary_dark"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/your_likes"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/right_bottom_user_info_button_default"
                            android:baselineAligned="false"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:visibility="visible"
                            android:weightSum="10">

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="7"
                                android:ellipsize="marquee"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:text="@string/likes"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />

                            <com.iwuvhugs.wallty.views.TextViewCustom
                                android:id="@+id/your_likes_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:ellipsize="marquee"
                                android:gravity="right"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:textColor="@color/blue_primary_dark"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/switch_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/wallty_logo_blue" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/wallty_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:textOff="Off"
                    android:textOn="On"
                    android:textSize="14sp" />
            </RelativeLayout>


            <!--           <LinearLayout
                           android:id="@+id/viewpager_layout"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"

                           android:orientation="vertical">-->

            <com.iwuvhugs.wallty.views.WalltyViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/wallty_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <!--  </LinearLayout>-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>